# WorkspaceLauncher

./: .biomeignore  .gitignore  README.md  biome.json  bump.config.ts  components.json  lefthook.yml  package-lock.json  package.json  spec.md  tsconfig.json  unocss.config.ts  vite.config.ts
.github/: Styleguide.md  copilot-instructions.md
.github/workflows/: release.yml
docs/: ActionLaunching.md  PROCESS_TRACKING_TEST.md
landing/: .dockerignore  DOKPLOY.md  Dockerfile  README.md  astro.config.mjs  docker-compose.yml  nginx.conf  nixpacks.toml  package.json  tsconfig.json  uno.config.ts
landing/src/components/: DocsSidebar.astro  Features.tsx  Footer.astro  Hero.tsx  (+3 more)
scripts/: check-migrations.ts  check-schema.ts  fix-runs-table.ts  migrate-db.ts  restore-db.ts
src/: App.tsx  app.css  index.tsx
src-tauri/: .gitignore  Cargo.toml  README.md  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial.sql  002_add_tools.sql  003_add_runs.sql  004_add_workspace_icon.sql  005_add_runs_error_message.sql  006_add_track_process_to_actions.sql  007_add_themes.sql  008_fix_boolean_columns.sql  009_add_auto_launch_to_actions.sql  010_create_global_variables.sql  011_drop_themes.sql
src-tauri/src/: database.rs  executable.rs  generic_launcher.rs  launcher.rs  launcher_core.rs  launcher_utils.rs  lib.rs  main.rs  migrations.rs  monitor.rs  process.rs  recovery.rs  test_helpers.rs
src-tauri/tests/: action_tests.rs
src-tauri/tests/common/: mod.rs
src/components/: ActionAIPromptDialog.tsx  ActionCard.tsx  ActionDialog.tsx  ActionHistoryView.tsx  ActionRunHistory.tsx  ActiveActionsManagerDialog.tsx  ColorPicker.tsx  Commander.tsx  DatabaseResetDialog.tsx  DeleteActionDialog.tsx  DeleteToolDialog.tsx  ExecutableDiscoveryButton.tsx  GlobalVariableCard.tsx  HotkeyHint.tsx  IconPicker.tsx  ImportDialog.tsx  Layout.tsx  LogViewer.tsx  MdiIcon.tsx  RunningActionsPanel.tsx  ShareDialog.tsx  Sidebar.tsx  ThemeCreator.tsx  ToolDialog.tsx  UpdateDialog.tsx  VariableCard.tsx  VariableDialog.tsx  WindowHeader.tsx  WorkspaceCreateDialog.tsx  WorkspaceDetailTriggers.tsx  WorkspaceEditDialog.tsx
src/libs/: api.ts  autostart.ts  database.ts  filePicker.ts  hotkeys.ts  importHelpers.ts  importLogic.ts  importSchema.ts  launcher.ts  mdiIcon.ts  scriptBuilder.ts  search.ts  share.ts  themeApplier.ts  themePresets.ts  toast.tsx  updater.ts  updaterDialog.ts  windowTitle.ts  workspaceDescriptionToggle.ts
src/models/: action.model.ts  common.ts  export.model.ts  setting.model.ts  theme.model.ts  tool.model.ts  variable.model.ts  workspace.model.ts
src/pages/: EnvironmentDetailPage.tsx  SettingsHotkeysPage.tsx  SettingsPage.tsx  SettingsThemeCreatorPage.tsx  WorkspaceDetailPage.helpers.ts  WorkspaceDetailPage.tsx  WorkspacesListPage.tsx
src/services/: pidChecker.ts  processTracking.ts  runningActions.ts
src/store/: action.tsx  environment.tsx  globalVariable.tsx  index.tsx  run.tsx  settings.tsx  theme.tsx  tool.tsx  tools.tsx  ui.tsx  variable.tsx  workspace.tsx
src/types/: database.ts
(+58 files in other folders)
